--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -11,7 +11,8 @@ matplotlib==1.5.3
 # Deep learning
 Keras==1.2.2
 ## TensorFlow
-https://storage.googleapis.com/tensorflow/mac/cpu/tensorflow-1.0.0-py3-none-any.whl
+#https://storage.googleapis.com/tensorflow/mac/cpu/protobuf-3.2.0-cp35-none-macosx_10_11_x86_64.whl # Is meant to make Tensorflow faster
+https://storage.googleapis.com/tensorflow/mac/cpu/tensorflow-1.0.1-py3-none-any.whl
 
 
 #Visualization
